[package]
name = "db"
version = "0.1.0"
description = "Work seamlessly with Winddle development database from the command line."
authors = ["Aubin Lorieux <aubin.lorieux@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
